--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -271,7 +271,7 @@
 
 ---
 
-### C++11智能指针
+### C++11重点
 
 ##### 1.介绍一下智能指针
 
@@ -464,9 +464,7 @@ int main() {
 
 ---
 
-### 构造函数与右值涉及问题
-
-##### 18.你知道哪些构造函数？
+##### 11.你知道哪些构造函数？
 
 - **默认构造函数**
 - **初始化构造函数（有参数）**
@@ -527,27 +525,27 @@ int main(){
 
 ---
 
-##### 19.介绍一下什么是右值
+##### 12.介绍一下什么是右值
 
 + 左值：可以出现在 = 左边的值
 + 右值：只能出现在 = 右边的值；如临时对象
 
 ---
 
-##### 20.什么是右值引用
+##### 13.什么是右值引用
 
 + `右值引用` 通过`&&`来 必须绑定 `右值` 的引用，
   + 右值引用只能绑定将要被销毁的对象，故可将右值引用的资源安全地移动到另一个对象
 
 ---
 
-##### 21.std::move 怎么使用？
+##### 14.std::move 怎么使用？
 
 + `std::move`函数可将左值显式转换为它对应的右值引用类型。处理完后，除对它赋值或销毁外，不可再使用它的值。
 
 ---
 
-##### 22.什么是移动构造函数
+##### 15.什么是移动构造函数
 
 + 代码构造和拷贝构造函数类似，但是内存的处理不是拷贝而是转移。参数类型是右值引用。
 
@@ -559,9 +557,179 @@ int main(){
 
 ---
 
+##### 16.lambda的使用
+
+- `lambda`：是一个可调用的代码单元，编译时像`内联函数`一样展开。本质编译器会生成与其对应的未命名的类类型。
+
+###### lambda形式
+
+- lambda表达式形式:
+
+  ```c++
+  [capture list](parameter list) -> return type {function body}
+  //有捕获列表、形参列表、返回类型、函数体，但可定义在函数内部（函数不可）
+  ```
+
+-  参数：
+
+- - capture list是`捕获列表`，是lambda所在函数中定义的局部变量的列表
+  - parameter list、return type、function body与函数一样
+  - lambda必须用`尾置返回`
+  - 可忽略形参列表和返回类型，但必须有捕获列表和函数体
+  - 若函数体不是单一return语句，则必须指定返回类型（否则为void）
+
+###### lambda参数传递
+
+- 实参初始化形参的方式和函数相同，但`lambda不可有默认实参`
+
+- lambda将局部变量包含在捕获列表中来，在函数体中使用。
+
+  ```c
+  [sz](const string &a){
+    return a.size() > sz;
+  }
+  ```
+
+###### lambda的捕获与返回
+
+- 从lambda生成的类都有一个数据成员对应捕获到的变量。lambda的数据成员在创建时被初始化，即`被捕获的变量用于初始化lambda匿名对象的成员`
+
+- lambda捕获变量的方式可用`值捕获`，`引用捕获` 和 `隐式捕获`
+
+  -  **值捕获：** （要改变值，使用`[]()mutable`）
+    - 值捕获的变量是在lambda创建时被拷贝而不是调用时拷贝，故创建后修改捕获变量不影响lambda中的值。
+  -  **引用捕获：**
+    - 使用`引用捕获`时必须确保lambda执行时被捕获变量存在。
+
+  > 最佳实践：尽量减少捕获的变量，且避免捕获指针/引用
+
+```c
+void fcn1(){
+    size_t v=42;
+    auto f1=[v]{return v;};     //值捕获，创建lambda（构造lambda对象）
+    auto f2=[&v]{return v;};    //引用捕获，创建lambda（构造lambda对象）
+    v=0;                        //改变捕获变量的值
+    auto j1=f1();               //j1是42，因为lambda创建时保存了捕获变量的拷贝
+    auto j2=f2();               //j2是0，因为lambda创建时未拷贝捕获变量，只是建立了引用
+}
+```
+
++  **隐式捕获：**让编译器根据lambda函数体中的代码来推断要捕获哪些变量。
+
+  + 使用隐式捕获，需在捕获列表中写 `&(引用捕获) `或 `=(值捕获)`
+  + 可混合使用隐式捕获和显式捕获，只需在捕获列表中写`&`或`=`，再写显式捕获的变量，要求：
+    + 捕获列表第一个元素必须是`&`或`=`，指定默认为引用/值捕获
+    + 显式捕获的变量必须使用与隐式捕获不同的方式。即隐式引用捕获，则显式必须为值捕获，反之亦然
+  + 例子：混合使用隐式捕获和显式捕获
+
+  ```c++
+  void print_strings(vector<strin> &words, ostream &os=cout, char c=' '){
+      //c为显式值捕获，其他变量（os）为隐式引用捕获
+      for_each(words.begin(),words.end(),
+               [&,c](const string &s){os<<s<<c;});
+      //os为显式引用捕获，其他变量（c）为隐式值捕获，等价于上一行
+      for_each(words.begin(),words.end(),
+               [=,&os](const string &s){os<<s<<c;});
+  }
+  ```
+
+###### 可变lambda []()mutable
+
++  普通lambda不会改变值捕获的变量的copy的值，但可变lambda可改变值捕获的变量的copy的值
+
+``` c++
+例子：可变lambda
+void fcn3(){
+    size_t v=42;
+    auto f=[v]() mutable {return ++v;}  //mutalbe，允许改变捕获到的copy的值
+    v=0;
+    auto j=f();                         //j是43
+}
+void fcn4(){
+    size_t v=42;//v是非const变量
+    auto f=[&v]() {return ++v;}  //允许改变非const引用的值
+    v=0;
+    auto j=f();                         //j是1
+}
+```
+
+###### 指定lambda返回类型
+
++ 若lambda函数体包含return之外的任何语句，则编译器推断它返回void，返回void的函数不能返回值，除非手动指定返回类型
+
+##### 17.bind参数绑定
+
+###### 基本使用
+
++ 对于少数地方使用的简单操作用lambda，而多次调用时应该定义函数。
+
++ 在`functional`头文件中定义了`bind`函数，看作通用的函数适配器。它接受一个可调用对象，生成新的可调用对象来适应原对象的参数列表（即改变可调用对象的调用接口）
+
++ 调用bind的形式为：
+
+  ```c
+  auto newCallable = bind(callable, arg_list);
+  ```
+
+  - callable是可调用对象，arg_list是逗号分隔的参数列表，对应callable的参数
+
+  - 调用newCallable时，是在用arg_list的参数调用callable
+
+  - arg_list中的参数可包含占位符，即`_n`，其中`n`是传入newCallable的第n个参数
+
+    > 名字_n都定义于placeholders命名空间中，嵌于std命名空间。placeholders命名空间定义于functional头文件
+
+```c++
+bool check_size(const string &s, string::size_type sz){
+    return s.size() >= sz;
+}
+int main(){
+		auto check = bind(check_size,std::placeholders::_1,6);
+		string s = "hello";
+  	bool b1 = check(s);
+  	cout << b1 << endl;
+}
+```
+
++ bind的使用
+
+  ```c++
+  using namespace placeholders;
+  auto g=bind(f,a,b,_2,c,_1); //对g的定义，abc类似于lambda的捕获列表
+  g(X,Y);                   //调用g
+  f(a,b,Y,c,X);             //等价于调用f
+  ```
+
+###### 引用参数的传递
+
+- 默认下，bind的非占位符参数被`拷贝`到可调用对象中，类似lambda中的`值捕获`
+- 用`ref`函数可实现bind中的`引用捕获`
+- `ref`函数返回一个对象，该对象中包含输入的引用，且可拷贝。若需要包含const引用，则应用`cref`函数。ref和cref也定义于`functional`头文件中
+
+```c++
+/* 上下文：os是局部变量，引用输出流；c是局部变量，类型为char */
+//lambda实现，引用捕获输出流，值捕获字符
+for_each(words.begin(),words.end(),
+         [&os,c](cons string &s){os<<s<<c;});
+//函数实现，要被标准库算法使用，需要用bind捕获os和c
+ostream &print(ostream &os, const string &s, char c){
+    return os<<s<<c;
+}
+auto Print =  bind(print, os, _1, ' ');//错，os不可拷贝，不能用默认方式bind
+auto Print =  bind(print, ref(os), _1, ' ');//对，用ref返回的对象包含os引用且可拷贝
+```
+
+---
+
 ### STL重点问题
 
-##### 23.vector的内存管理
+##### 1.迭代器失效问题
+
+<img src="../图片/STL迭代器失效.jpg" width="900px" />
+
+---
+
+##### 2.vector的内存管理
 
 + v.size()：获得容器中有多少元素
 + v.capacity()：获得容器在它已经分配的内存中可以容纳多少元素 
@@ -578,20 +746,20 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ---
 
-##### 24. vector的迭代器类型与数据成员
+##### 2. vector的迭代器类型与数据成员
 
 + 迭代器类型： `Random Access Iterator` 
 + 数据成员：三个迭代器(指针) `first,last,end`
 
 ---
 
-##### 25. 介绍一下 deque
+##### 3. 介绍一下 deque
 
 + `std::deque` （ double-ended queue ，双端队列）是有下标顺序容器，它允许在其首尾两段快速插入及删除。另外，在 deque 任一端插入或删除不会非法化指向其余元素的指针或引用。
 
 ---
 
-##### 26. 与vector比有什么优势
+##### 4. 与vector比有什么优势
 
 + 与 `std::vector` 相反， deque 的元素不是相接存储的：典型实现用单独分配的固定大小数组的序列，外加额外的登记，这表示下标访问必须进行二次指针解引用，与之相比 vector 的下标访问只进行一次。
 + deque 的存储按需自动扩展及收缩。扩张 deque 比扩张vector更优，因为它不涉及到复制既存元素到新内存位置。
