--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -273,6 +273,53 @@
 
 ### C++11重点
 
+##### 0.虚函数与虚指针的原理
+
++ 编译器发现基类中有虚函数时，会自动为每个含有虚函数的类生成一份一维数组的虚表，保存虚函数的入口地址；虚表可以继承，如果子类没有重写虚函数，那么子类虚表中仍然会有该函数的地址，只不过这个地址指向的是基类的虚函数实现。如果基类3个虚函数，那么基类的虚表中就有三项(虚函数地址)，派生类也会有虚表，至少有三项
++ 如果派生类重写了相应的虚函数，那么虚表中的地址就会改变，指向自身的虚函数实现。如果派生类有自己的虚函数，那么虚表中就会添加该项。
++ 编译器会在每个对象的前四个字节中保存一个虚表指针vptr，指向对象所属类的虚表。在构造时，根据对象的类型去初始化虚指针vptr，从而让vptr指向正确的虚表，从而在调用虚函数时，能找到正确的函数
+
+---
+
+##### 虚继承的作用
+
++ 是解决C++多重继承问题的一种手段，从不同途径继承来的同一基类，会在子类中存在多份拷贝。这将存在两个问题：
+  + 浪费存储空间
+  + 存在二义性问题
++ 虚基类表指针（virtual base table pointer），该指针指向了一个虚基类表（virtual table），虚表中记录了虚基类与本类的偏移地址；通过偏移地址，这样就找到了虚基类成员，而虚继承也不用像普通多继承那样维持着公共基类（虚基类）的两份同样的拷贝，节省了存储空间。
+
+```c++
+#include<iostream>
+using namespace std;
+class A { //大小为4
+public:
+    int a;
+};
+class B : virtual public A {//大小为12，变量a,b共8字节，虚基类表指针4
+public:
+    int b;
+};
+class C : virtual public A {//与B一样12
+public:
+		int c;
+};
+class D : public B, public C {//24,变量a,b,c,d共16，B的虚基类指针4，C的虚基类指针
+public:
+		int d;
+};
+int main(){
+    A a; B b; C c; D d;
+    cout << sizeof(a) << endl;
+    cout << sizeof(b) << endl;
+    cout << sizeof(c) << endl;
+    cout << sizeof(d) << endl;
+    system( "pause");
+    return 0;
+}
+```
+
+---
+
 ##### 1.介绍一下智能指针
 
 + 原理：智能指针是一个类，通过在构造函数中传入一个普通指针，析构函数中释放传入的指针。智能指针的类是栈上的对象，智能指针指向堆上开辟的空间，函数结束时，栈上的函数会自动被释放，智能指针指向的内存也会随之消失，防止内存泄漏。
@@ -1985,10 +2032,37 @@ int poll(struct pollfd *fds, nfds_t nfds, int timeout);
 
 > `c++11`中提供了`#include <condition_variable>`头文件
 
-+ `std::condition_variable`可以和`std::mutex`结合一起使用，其中有两个重要的接口，`notify_one()`和`wait()`
-  + `wait()`可以让线程陷入**休眠状态**
++ `std::condition_variable cond`可以和`std::mutex`结合一起使用，其中有两个重要的接口，`notify_one()`和`wait()`
+  + `cond.wait(locker,[](){return ...;});`可以让线程陷入**休眠状态**
   + `notify_one()`就是**唤醒**处于`wait`中的**其中一个条件变量**
   + `notify_all()`同时唤醒所有处于`wait`状态的条件变量。
+
+---
+
+##### 10.原子操作原理
+
++ 原子本意是“不能被进一步分割的最小粒子”，而原子操作（atomic operation）意为”不可被中断的一个或一系列操作” 
+
++ 32位IA-32处理器使用**基于对缓存加锁或总线加锁**的方式来实现多处理器之间的原子操作。
+
++ 处理器保证从系统内存当中操作一个字节是原子的，保证一个处理器读取一个字节时，其他处理器不能访问这个字节的内存地址。但是复杂的内存操作不能自动保证其原子性，比如跨多个缓存行，跨页表的访问。但是处理器提供总线锁定和缓存锁定两个机制来保证复杂内存操作的原子性。
+
++ 总线加锁：
+
+  + 总线锁就是使用处理器提供的一个LOCK＃信号，当一个处理器在总线上输出此信号时，其他处理器的请求将被阻塞住，此时该处理器可以独占使用共享内存。
+
++ 缓存加锁：
+
+  + 总线锁定把CPU和内存之间通信锁住了，这使得锁定期间，其他处理器不能操作其他内存地址的数据，所以总线锁定的开销比较大，在某些场合下使用缓存锁定代替总线锁定来进行优化。
+  + 不需锁定总线，只需要“锁定”被缓存的缓存行即可，接受到lock指令，通过**缓存一致性协议**，维护本处理器内部缓存和其他处理器缓存的一致性。
+
+  > 当某个处理器修改缓存行数据时，其他的处理器通过监听机制获悉共享缓存行的数据被修改，会使其共享缓存行失效。本处理器会将修改后的缓存行写回到主内存中。此时其他的cpu如果需要此缓存行共享数据，则从主内存中重新加载，并放入缓存，以此完成了**缓存一致性**。
+
+  + 但是有两种情况下处理器不会使用缓存锁定。
+    + 当操作的数据不能被缓存在处理器内部，或操作的数据跨多个缓存行，则处理器会调用总线锁定。
+    + 有些处理器不支持缓存锁定。对于Inter486和奔腾处理器,就算锁定的内存区域在处理器的缓存行中也会调用总线锁定。
+
+  > 一次获取一整块的内存数据，放入缓存。那么这一块数据，通常称为**缓存行（cache line）**。缓存行（cache line）是CPU缓存中可分配、操作的最小存储单元。
 
 ---
 
