--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -508,7 +508,7 @@ struct number_4{
 
 > sizeof(st4)=12,而不是4+4+1=9。
 
-+ 补齐原则： 在经过对齐原则分析后，检查计算存储单元是否为所有元素中所占内存最大的元素的长度的整数倍
++ 补齐原则： 在经过对齐原则分析后，计算检查存储单元是否为所有元素中所占内存最大的元素的长度的整数倍
   + 是，则结束
   + 若不是，则补齐为它的整数倍。
 
@@ -648,7 +648,141 @@ int main(){
 
 ---
 
-##### 9.32位于64位字节大小
+##### 9.main函数执行之前与之后打印
+
++ \_\_attribute\__((constructor)) 表示这段代码将在main函数前调用,就像在C++里面的全局变量类的构造一样.
+
++ \_\_attribute\__((destructor)) 表示这段代码将在main函数后调用,就像在C++里面的全局变量类的析构一样。
+
+```c++
+#include<iostream>  
+using namespace std;  
+__attribute__((constructor)) void before_main()  {  
+    cout<<"Before Main"<<endl;  
+}  
+__attribute__((destructor)) void after_main()  {  
+    cout<<"After Main"<<endl;  
+}  
+class AAA{  
+public:  
+    AAA(){  
+        cout<<"AAA construct"<<endl;  
+    }     
+    ~AAA(){  
+        cout<<"AAA destructor" <<endl;  
+    }     
+};  
+AAA A;  
+int main()  {  
+    cout<<"in main"<<endl;  
+    return 0;  
+} 
+
+//带优先级
+static  __attribute__((constructor(103))) void before3()
+
+static  __attribute__((constructor(101))) void before1()
+
+static  __attribute__((constructor(102))) void before2()
+```
+
++ 全局类的构造过程发生在before_main()函数前面,而析构也发生在after_main()前面.
+
+---
+
+#####10.\_\_attribute\__机制 
+
++ __\_\_attribute\____可以设置函数属性(Function Attribute)、变量属性(Variable Attribute)和类型属性(Type Attribute)
+
++ __\_\_attribute\____前后都有两个下划线，并且后面会紧跟一对原括弧，括弧里面是相应的\_\_attribute\__参数
+
+  `__attribute__ ((attribute-list))`
+
+---
+
+##### 11.main函数执行之前的操作
+
+```css
+__start:
+　　　　 :
+　　　　 init stack;
+　　　　 init heap;
+　　　　 open stdin;
+　　　　 open stdout;
+　　　　 open stderr;
+　　　　 :
+　　　　 push argv;
+　　　　 push argc;
+　　　　 call _main;    (调用 main)
+　　　　 :
+　　　　 destory heap;
+　　　　 close stdin;
+　　　　 close stdout;
+　　　　 close stderr;
+　　　　 :
+　　　　 call __exit;
+```
+
++ 创建进程后，把控制权交给程序的入口函数，即为运行时库的某个入口函数。
+
+  + glibc的入口函数是_start
+  + msvc(vc 6.0)的是mainCRTStartup
+
++ 入口函数对运行库和运行环境进行初始化，包括堆、I/O、线程、全局变量构造
+
+  + 初始化堆，栈（设置栈指针）
+
+  + 全局变量、对象和静态变量、对象的空间分配和初始化。
+    + 初始化静态static变量和global全局变量，即.data段的内容
+    + 将未初始化部分的全局变量赋初值:数值型short，int，long等为0，bool为FALSE，指针为NULL等 等，即.bss段的内容
+
+  + 初始化C/C++库
+
+  + 参数压栈  argc,argv ,获取环境变量 
+  + 打开标准输入，输出、错误流
+
++ 注册析构函数，使用atexit注册析构函数（注册时在链表头插入链接，main函数退出也从链表头开始获取链表函数，进行调用）
+
+---
+
+##### 12.main函数之后的操作
+
+- 返回入口函数，进行清理工作
+- 包括全局变量析构、堆销毁、关闭I/O
+  - 销毁堆内存
+  - 关闭标准输入、输出、关闭错误流
+- 调用exit系统API退出进程
+
+---
+
+##### 13.atexit注册析构函数
+
+```c++
+void func1(){
+    printf("The process is done...\n");
+}
+void func2(){
+    printf("Clean up the processing\n");
+}
+void func3(){
+    printf("Exit sucessful..\n");
+}
+int main() { 
+　　//其作用是注册某一个函数，当进程执行结束时，会自动调用注册的函数
+　　//注册几次，就执行几次
+    atexit(func1); 
+    atexit(func2); 
+    atexit(func3); 
+    exit(0); 
+}
+```
+
++ 最后的调用顺序与main函数中的定义顺序相反
++ 还是在全局变量类的析构函数之前调用
+
+---
+
+##### 14.32位于64位字节大小
 
 + 32位
   + char*（即指针变量）: 4个字节(32位的寻址空间是2^32, 即32个bit)
@@ -855,6 +989,13 @@ int main(){
 }
 ```
 
+##### 13.struct和union 的区别
+
++ 在任何同一时刻, union中只存放了一个被选中的成员；而struct的所有成员都存在。
+
++ 在struct中，各成员都占有自己的内存空间，它们是同时存在的,一个struct变量的总长度等于所有成员长度之和，遵从字节对其原则; 
++ 在Union中，所有成员不能同时占用它的内存空间，它们不能同时存在 , Union变量的长度等于最长的成员的长度。
+
 ---
 
 ### C++基本介绍
@@ -955,7 +1096,7 @@ int main(){
 ##### ==8.C++中static成员函数的作用==
 
 + 静态成员函数只与类本身相关，不与任何对象绑定，没有this指针。因此调用速度与类的全局函数速度更快
-+ 它无法访问非静态数据成员与非静态成员函数，它只能调用其余的静态成员函数与静态成员变量。
++ 它无法访问非静态成员变量与非静态成员函数，它只能调用其余的静态成员函数与静态成员变量。
   + 调用格式：＜类名＞::＜静态成员函数名＞
 
 ##### 9.C++中const成员
@@ -1618,8 +1759,6 @@ Sales_data add (const Sales_data&, const Sales_data&);
 ---
 
 ### 动态内存
-
-
 
 ##### ==1.linux进程的内存分布==
 
@@ -2390,11 +2529,19 @@ int main(){
 
 ##### 1.模板类的原理
 
-
+<img src="../图片/ 类模板原理.png" style="zoom:50%;" />
 
 ##### 2.模板特例化的实现方式
 
+模板分为类模板与函数模板，特化分为全特化与偏特化。全特化就是限定死模板实现的具体类型，偏特化就是如果这个模板有多个类型，那么只限定其中的一部分。
 
+而对于函数模板，却只有全特化，不能偏特化：
+
+至于为什么函数不能偏特化，似乎不是因为语言实现不了，而是因为偏特化的功能可以通过函数的重载完成。
+
+---
+
+<img src="../图片/模板2.png" style="zoom:50%;" />
 
 
 
@@ -2415,7 +2562,7 @@ int main(){
 ##### 1. **OSI的七层模型是什么？有哪些功能？**
 
 + 物理层：底层数据传输，如网线；网卡标准。传输的数据称为比特流
-+  数据链路层：定义数据的基本格式，封装成帧，进行透明传输；如网卡MAC地址。 传输的数据称为帧
++  数据链路层：定义数据的基本格式，封装成帧，进行透明传输；如网卡MAC地址。 传输的数据称为帧![截屏2021-09-10 上午10.15.38](../../../../Library/Application Support/typora-user-images/截屏2021-09-10 上午10.15.38.png)
 + 网络层：定义IP编址，定义路由功能：如不同设备的数据转发。 传输的数据称为包
 + 传输层：端到端传输数据的基本功能；如 TCP、UDP。 传输的数据称为段
 + 会话层：控制应用程序之间会话能力；如不同软件数据分发给不同软件。 
@@ -5817,4 +5964,6 @@ void consumer() {
    + 因为考虑了移动方向，因此所有的磁盘请求都会被满足，解决了 SSTF 的饥饿问题。
 
 ---
+
+## 六.智力题
 
