--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -4084,9 +4084,17 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
 #### 基础知识
 
-##### 0.讲一讲你理解的操作系统
+##### 1.讲一讲你理解的操作系统
 
-##### 1. **冯诺依曼结构有哪几个模块?分别对应现代计算机的哪几个部分?**
++ 操作系统是管理和控制计算机硬件与软件资源的计算机程序，是直接运行在“裸机”上的最基本的系统软件，任何其他软件都必须在操作系统的支持下才能运行。
++ 要从操作系统发展的过程来能了解为什么需要有那些功能。
+  + 最开始设计出的图灵机，利用控制器和穿孔卡片，可以将程序写在卡片上进行加法操作
+  + 之后，冯诺依曼创造性地提出了存储程序思想，即五大模块，将程序存在内存里，利用指令指针取址，载入控制器进行执行，即单道程序。
+  + 后来，为了避免IO操作耗费时间，提出多道程序交替执行，作业之间进行切换和调度，这边就引出了进程调度算法，以及怎样保存进程的上下文环境，切换回来可以继续执行。
+  + 再后来，为了能让多人进行操作，提出分时系统的概念，而这就是并发的实现，核心还是任务切换；并且意识到了资源复用，于是提出虚拟内存的概念。利用内存交换和内存覆盖技术，让我们从逻辑上看起来内存变大了。以及怎么使用内存，避免内存碎片什么的，这边又提出了分页技术，页面置换算法等实现技术。
+  + 然后慢慢得演变到了现在这样的操作系统。
+
+##### 2. **冯诺依曼结构有哪几个模块?分别对应现代计算机的哪几个部分?**
 
 + 存储器：内存 
 + 控制器：南桥北桥 
@@ -4129,7 +4137,7 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
 ##### 5.为什么要有用户态和内核态，哪些操作会是用户态切换到内核态
 
-+ Linux 按照特权等级，把进程的运行空间分为内核空间和用户空间，设置CPU 特权等级的 Ring 0 和 Ring 3。限制不同的程序之间的访问能力， 更安全。
++ 操作系统按照特权等级，把进程的运行空间分为内核空间和用户空间，设置CPU 特权等级的 Ring 0 和 Ring 3。限制不同的程序之间的访问能力， 更安全。
   - 内核空间（Ring 0）具有最高权限，可以直接访问所有资源；
   - 用户空间（Ring 3）只能访问受限资源，不能直接访问内存等硬件设备，必须通过系统调用陷入到内核中，才能访问这些特权资源。
 
@@ -4216,7 +4224,11 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 
 + 中断处理程序与其他内核的真正区别在于：中断处理程序是被内核调用来响应中断的，而它们运行于我们称之为中断上下文的特殊上下文中。
 
-##### 9.键盘敲入字符后，操作系统发生了哪些事情？
+---
+
+#### 应用知识
+
+##### 1.键盘敲入字符后，操作系统发生了哪些事情？
 
 <img src="../图片/键盘操作.png" width="500px" />
 
@@ -4235,6 +4247,62 @@ GET得看浏览器和服务器限制；POST得看服务器限制。
 > + 键盘控制器是计算机内部的一种集成电路，用来接收来自键盘的输入 并将其传输到CPU ，然后再由CPU将其传递给操作系统进行解释，当键盘控制器接收到来自键盘或类似输入设备的信号时，它会产生一个被称为中断的信号，使CPU暂时停止执行，以便处理键盘控制器发送的信号。
 > + 在响应一个特定中断的时候，内核会执行一个函数，该函数叫中断处理程序。产生中断的每个设备都有一个相应的中断处理程序。**一个设备的中断处理程序是它设备驱动程序的一部分。**
 >   + 中断处理程序与其他内核的真正区别在于：中断处理程序是被内核调用来响应中断的，而它们运行于我们称之为中断上下文的特殊上下文中。
+
+---
+
+##### 2.运行helloworld程序，操作系统做了哪些事情？
+
++ 要启动程序执行，比如Windows上点击hello world.exe文件，告知操作系统来运行
+
++ （操作系统）操作系统接到请求后，就会根据文件名，到磁盘上找到hello world程序的相关信息，检查其类型是否是可执行文件；并通过程序首部信息， 确定代码和数据在可执行文件中的位置并计算出对应的磁盘块地址
+
+  > linux ELF,  windows PE 
+
++ （操作系统）为了执行这个hello world程序，创建一个新的进程，并将hello world可执行文件格式映射到该进程结构，表示由该进程执行hello world程序
+
++ （操作系统）操作系统为hello world程序设置CPU上下文环境，并跳到程序开始处，准备执行这个程序，下一个指令周期，就是执行hello world程序
+
++ （CPU）**假设调度程序正好选中hello world程序**，操作系统把控制权交给了调度程序，执行hello world程序的第一条指令。程序在执行的时候，先要把程序的代码和数据读入内存，CPU才能执行，但是hello world的代码和数据还没有读入内存，就会产生缺页异常，硬件机制就会捕获缺页异常，并且把控制权交给操作系统
+
++ （操作系统）操作系统的内存管理模块就会分配一页空闲的物理内存，并且根据前面计算出的磁盘块地址把hello world程序的代码从磁盘读入内存，然后继续执行hello world程序，有的时候程序很大，一页内存还不够，因此在执行过程中会多次地产生缺页异常，然后从磁盘读入程序到内存
+
++ （CPU）hello world程序执行puts函数（系统调用，由操作系统完成），在显示器上写（显示）一字符串
+
++ （操作系统）找到要将字符串送往的显示设备，通常设备是由一个进程控制的，操作系统将要写的字符串送给该进程
+
++ （操作系统）控制设备的进程告诉设备的窗口系统它要显示字符串，窗口系统确定这是一个合法的操作，然后将字符串转换成像素，将像素写入设备的存储映像区
+
++ 视频硬件将像素转换成显示器可接收的一组控制/数据信号，显示器解释信号，激发液晶屏，屏幕上看到“hello world”
+
+---
+
+##### 3.打开电源后，操作系统干了哪些事情？
+
++  **第一阶段：加载BIOS**
+
+  + 当打开计算机电源，计算机会首先加载基本输入输出系统（Basic Input Output System ）BIOS系统。
+  + BIOS程序存放在主板ROM(只读存储芯片)之中、即使在关机或掉电以后该程序也不会丢失。其中包含了CPU的相关信息、设备启动顺序信息、硬盘信息、内存信息、时钟信息等等，之后，计算机就知道应该去读取哪个硬件设备了
+
++  **第二阶段：读取主引导记录**
+
+  + 读取硬盘上磁道的第一个扇区，即Master Boot Record即主引导记录、它的大小是512字节，里面却存放了预启动信息、分区表信息。
+  + 系统找到BIOS所指定的硬盘的主引导记录后，就会将其复制到特定地址（0×7c00地址）的物理内存中。
+
++  **第三阶段：GRUD引导**
+
+  + 在操作系统内核运行之前，运行Boot Loader 。通过它来初始化硬件设备、建立内存空间的映射图，从而将系统的软硬件环境带到一个合适的状态，以便为最终调用操作系统内核做好一切准备；Grub、Lilo是常见的Boot Loader
+
+    > Boot Loader有若干种，其中Grub、Lilo和spfdisk是常见的Boot Loader（一段小程序）。系统读取内存中的grub配置信息,并依照此配置信息来启动不同的操作系统。
+
++  **第四阶段：加载内核**
+
+  + 根据grub设定的内核映像所在路径，系统读取内存映像，并进行解压缩操作。此时，屏幕一般会输出 “Uncompressing Linux” 的提示。 当解压缩内核完成后，屏幕输出“OK, booting the kernel”。
+  + 系统将解压后的内核放置在内存之中，并调用start_kernel()函数来启动一系列的初始化函数并初始化各种设备，完成Linux核心环境的建立。至此，Linux内核已经建立起来了，基于Linux的程序应该可以正常运行了。
+
++  **最后阶段：读取程序进行登录**
+
+  + 内核加载成功后，第一个运行的程序是/sbin/init。它根据配置文件（Debian系统是/etc/initab）产生init进程。这是Linux启动后的第一个进程，pid进程编号为1，其他进程都是它的后代。
+  + 然后，init线程加载系统的各个模块，比如窗口程序和网络程序，直至执行/bin/login程序，跳出登录界面，等待用户输入用户名和密码。
 
 ---
 
