--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -806,6 +806,29 @@ vector采用的`内存扩张策略`一般是：在每次需要分配新空间时
 
 ---
 
+##### 4.vector扩容细节
+
+```c++
+// 先保证扩容后的内存大小不超限。如果满足，就扩容50% 
+_Capacity = max_size() - _Capacity / 2 < _Capacity  
+  				? 0 : _Capacity + _Capacity / 2;     
+// 扩容50%后依然不够容下，则使容量等于当前数据个数加上新增数据个数（有时候是好多数据（存在文件夹）一起push进去 
+if (_Capacity < size() + _Count) 
+  	_Capacity = size() + _Count;  
+//申请新的空间  
+pointer _Newvec = this->_Alval.allocate(_Capacity);
+pointer _Ptr = _Newvec;  
+//拷贝原有数据到新的内存中  
+_Ptr = _Umove(_Myfirst, _VEC_ITER_BASE(_Where),   _Newvec);   // copy prefix    
+ //拷贝新增数据到新的内存的后面  
+_Ptr = _Ucopy(_First, _Last, _Ptr); 
+_Umove(_VEC_ITER_BASE(_Where), _Mylast, _Ptr);  // copy suffix   
+_Destroy(_Newvec, _Ptr);  
+this->_Alval.deallocate(_Newvec, _Capacity);//释放原来申请的内存  
+```
+
+---
+
 ##### 4.vector为什么是成倍增长，而不是每次增长一个固定大小的容量呢？
 
 + 采用成倍方式扩容，vector 中 push_back 操作的时间复杂度可以保证常数，而增加指定大小的容量只能达到O(n)的时间复杂度，因此，使用成倍的方式扩容。
@@ -910,18 +933,106 @@ struct __deque_iterator
 + priority_queue，优先队列，是一个拥有权值观念的queue，它跟queue一样是顶部入口，底部出口，在插入元素时，元素并非按照插入次序排列，它会自动根据权值(通常是元素的实值)排列，权值最高，排在最前面。
 + 默认情况下，priority_queue使用一个max-heap完成，底层容器使用的是一般为vector为底层容器，堆heap 为处理规则来管理底层容器实现 。priority_queue的这种实现机制导致其不被归为容器，而是一种容器配接器。
 
-
-
 ##### 15. **map、set是怎么实现的，红黑树是怎么能够同时实现这两种容器? 为 什么使用红黑树?**
 
 + 他们的底层都是以红黑树的结构实现，因此插入删除等操作都在O(logn)时间内完成，因此可以完成高效的插入删除;
 + 定义了一个模版参数，如果它是key那么它就是set，如果它是map，那么它就是map；底层是红黑树，实现map的红黑树的节点数据类型是key+value，而实现set的节点数据类型是value
 + 因为map和set要求是自动排序的，红黑树能够实现这一功能，而且时间复杂度比较低
 
-##### 16. map中[] 与 find 的区别
+---
+
+##### 16. 红黑树的迭代器是什么？++和--怎么实现？
+
++ 红黑树的节点和迭代器均采用了双层结构：
+  - 节点：\__rb_tree_node继承自__rb_tree_node_base
+  - 迭代器：\__rb_tree_iterator继承自__rb_tree_base_iterator
+
+```c++
+struct __rb_tree_base_iterator{
+    typedef __rb_tree_node_base::base_ptr base_ptr;
+    typedef bidirectional_iterator_tag iterator_category; // 双向迭代器
+    typedef ptrdiff_t difference_type;
+    base_ptr node;  // 迭代器和节点之间的纽带
+    void increment() { // 迭代器++时使用
+         ....
+    }
+    void decrement()  { // 迭代器--时使用
+         ....
+    }
+};
+```
+
++ ++ 对应的increment操作
+
+  + 红黑树自增遍历，按照中序遍历结果，左中右。
+  + 先找到最左边的结点，看此结点是否有右结点。
+    + 如果有右结点，则此结点下一个应该为右结点子树中最小的结点（右子树最左边的结点）。
+    + 如果没有右结点，则此结点应该逐层向上走。
+
+  ```c++
+  //指针自增操作（按照中序遍历的结果输出）
+  //如图1所示
+  voidIncrement() {
+      //如果此结点的右子树存在   则应该找右子树最小的结点也就为右子树最左边的结点
+      if(_pNode->_pRight){
+          _pNode= _pNode->_pRight;
+          while(_pNode->_pLeft)
+           	 _pNode= _pNode->_pLeft;
+  		}
+      //若不存在
+      //若此结点为父亲结点的右结点则应该一直向上找（因为上面的都比下面的小不为++的结果）
+      //否则为左节点时此时的父亲结点比pNode大此时父亲结点就为++的下一个节点
+      else{
+          Node* pParent = _pNode->_pParent;
+          while(pParent->_pRight== _pNode){
+              _pNode= pParent;
+              pParent= pParent->_pParent;
+          }
+          //这里要特殊处理因为如果此时是跟跟的右子树不存在则应该再加就赋给跟的parent
+          if(pParent->_pRight!= _pNode)
+            	_pNode= pParent;
+  }
+  ```
+
++ --对应的Decrement操作
+
+  + 从end开始自减，因为自减最后会减到根（就是起始的结点 左为begin右为end），所以先判断此结点是否是根
+    + 如果是根的话，再减就为最大的结点。
+    + 如果不是根，判断此结点是否有左子树，如果有左子树，则应该找左子树中最大的结点为减减后的结点。
+    + 否则，不是根也没有左子树，那就在右子树中逐层向上找
+
+  ```c++
+  void Decrement()
+  {
+      //如果是end()为起始结点的话起始结点自减就应该为根节点右子树的第一个结点
+      if(_pNode->_color== RED && _pNode->_pParent->_pParent== _pNode)
+        	_pNode= _pNode->_pRight;
+      //否则此结点存在左子树就应该找左子树最右边的结点找左子树最大的结点
+      elseif(_pNode->_pLeft){
+          _pNode= _pNode->_pLeft;
+          while(_pNode->_pRight)
+            	_pNode= _pNode->_pRight;
+      }
+      //否则不是根结点也没有左子树如图4 就应该找此子树的根节点
+      else{
+          Node* pParent = _pNode->_pParent;
+          while(pParent->_pLeft== _pNode){
+              _pNode= pParent;
+              pParent= pParent->_pParent;
+          }
+          //此时就不用再判断如上加加的条件了因为走到这一步pParent一定是减减后最小的
+          _pNode= pParent;
+  }
+  ```
+
+---
+
+##### 17. map中[] 与 find 的区别
 
 + map的下标运算符[]的作用是:将关键码作为下标去执行查找，并返回对应的值；如果不存在这个关键码，就将一个具有该关键码和值类型的默认值的项插入这个map。
 + map的find函数用关键码执行查找，找到了返回该位置的迭代器;如果不存在这个关键码，就返回尾迭代器。
+
+---
 
 ##### 18. hashtable怎么实现的？
 
