--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -478,6 +478,58 @@ complicated.o: complicated.c
 
 ---
 
+### 6.shell编程
+
+#### shell基础
+
+##### 1.有哪些shell？
+
++ sh：由Steven Bourne开发，各个UNIX系统都有
++ bash：由GNU开发的shell，主要目的是与POSIX标准保持一致。
+
+---
+
+##### 2.shell编程的格式
+
+```bash
+#! /bash/sh #指定解释器
+```
+
+---
+
+##### 3.shell的执行方式
+
+```bash
+chmod a+x test.sh  #修改权限
+./test.sh					 #执行
+```
+
+```bash
+/bin/sh ./test.sh  #利用可执行程序进行执行
+```
+
+---
+
+##### 4.shell的执行原理
+
++ Shell会fork一个子进程并调用exec执行./test.sh 这个程序，exec系统调用应该把子进程的代码段替换成./test.sh程序的代码段，并从它的\_start开始执行。
+
++ 然而test.sh是个文本文件，根本没有代码段和\_start函数，怎么办呢？其实exec还有另外一种机制，如果要执行的是一个文本文件，并且第一行指定了解释器，则用解释器程序的代码段替换当前进程，并且从解释器的_start开始执行，而这个文本文件被当作命令行参数传给解释器。因此，执行上述脚本相当于执行程序
+
+---
+
+##### 5.加()进行执行的原理
+
++ fork出一个子Shell执行小括号中的命令
+
+---
+
+#### 基本语法
+
+
+
+---
+
 ## 二.C/C++ 重要问题
 
 ##### 1.C中内存对齐原则?
@@ -782,7 +834,16 @@ int main() {
 
 ---
 
-##### 14.32位于64位字节大小
+##### 14.面向对象编程和泛型编程的区别
+
++ 面向对象是将数据与操作这些数据的函数方法联系在一起。
++ 泛型编程将数据与函数方法分开，利用迭代器来进行操作。分开来可以让容器与算法进行单独的设计，利用迭代器来进行沟通实现。
+
+
+
+---
+
+##### 15.32位于64位字节大小
 
 + 32位
   + char*（即指针变量）: 4个字节(32位的寻址空间是2^32, 即32个bit)
@@ -2530,6 +2591,54 @@ int main(){
 ##### 1.模板类的原理
 
 <img src="../图片/ 类模板原理.png" style="zoom:50%;" />
+
+---
+
+##### 2.全特化与偏特化
+
++ 模板为什么要特化，因为编译器认为，对于特定的类型，如果你能对某一功能更好的实现，那么就该听你的。
++ 模板分为类模板与函数模板，特化分为全特化与偏特化。全特化就是限定死模板实现的具体类型，偏特化就是如果这个模板有多个类型，那么只限定其中的一部分。
+
+```c++
+template<typename T1, typename T2>
+class Test{
+public:
+    Test(T1 i,T2 j):a(i),b(j){cout<<"模板类"<<endl;}
+private:
+    T1 a;
+    T2 b;
+};
+
+template<>
+class Test<int , char>{
+public:
+    Test(int i, char j):a(i),b(j){cout<<"全特化"<<endl;}
+private:
+    int a;
+    char b;
+};
+
+template <typename T2>
+class Test<char, T2>{
+public:
+    Test(char i, T2 j):a(i),b(j){cout<<"偏特化"<<endl;}
+private:
+    char a;
+    T2 b;
+};
+```
+
+```c++
+Test<double , double> t1(0.1,0.2);  
+Test<int , char> t2(1,'A');  
+Test<char, bool> t3('A',true);  
+//依次打印：
+//模板类
+//全特化
+//偏特化
+```
+
+---
 
 ##### 2.模板特例化的实现方式
 
