--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -918,6 +918,12 @@ struct __deque_iterator
 
 ---
 
+##### 13.为什么list不支持sort排序
+
++ 因为sort中的迭代器只支持随机访问迭代器，这样才支持加减乘除操作，而list并不是连续空间，不能随机访问，所以不支持。
+
+---
+
 ##### 13.stack 与 Queue是如何实现的？
 
 + stack(栈)是一种先进后出(First In Last Out)的数据结构，只有一个入口和出口，那就是栈顶，除了获取栈顶元素外，没有其他方法可以获取到内部的其他元素。
@@ -1065,7 +1071,7 @@ struct __rb_tree_base_iterator{
 | -------------------- | -------- | -------- | ---------------- | ------------ | ---------- | ---------- |
 | `std::map`           | 红黑树   | Key有序  | key不可重复      | key不可修改  | $O(log_n)$ | $O(log_n)$ |
 | `std::multimap`      | 红黑树   | Key有序  | key可重复        | key不可修改  | $O(log_n)$ | $O(log_n)$ |
-| `std::unordered_map` | 哈希表   | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
+| `std::unordered_map` | 哈希 表  | Key无序  | key不可重复      | key不可修改  | $O(1)$     | $O(1)$     |
 
 `std::unordered_map` 底层实现为哈希表，`std::map` 和`std::multimap` 的底层实现是红黑树。同理，`std::map` 和`std::multimap` 的key也是有序的（这个问题也经常作为面试题，考察对语言容器底层的理解）。
 
