--- a/秋招经历/面经1.md
+++ b/秋招经历/面经1.md
@@ -526,7 +526,89 @@ chmod a+x test.sh  #修改权限
 
 #### 基本语法
 
+---
 
+### 7.sed操作
+
+##### 1.sed的基本介绍
+
++ sed意为流编辑器（Stream Editor），在Shell脚本和Makefile中作为过滤器使用非常普遍，也就是把前一个程序的输出引入sed的输入，经过一系列编辑命令转换为另一种格式输出。sed和vi都源于早期UNIX的ed工具，所以很多sed命令和vi的末行命令是相同的。
+
+---
+
+##### 2.基本使用
+
+```bash
+-i #执行文本
+-n #静默输出
+-e #多条指令
+```
+
++ 格式一：`sed 参数  '脚本语句' 执行文件`
+
++ 格式二：`sed 参数  -f '脚本文件' 执行文件`
+
++ 基本操作：
+
+  + 追加a(append)：`sed -i '4a xxxxxx' test.sh`
+  + 删除d(delete)： `sed -i '2,7d' test.sh`
+  + 插入i(insert)：   `sed -i '4i yyyyyyy' test.sh ` 
+  + 替换s(substitution)： `sed -i 's/BUF/buffer/g' test.sh` ： 表示将test.sh文件中的BUF替换成buffer
+
+  ```bash
+  /pattern/p #打印匹配pattern的行
+  /pattern/d #删除匹配pattern的行
+  /pattern/s/pattern1/pattern2/ #查找符合pattern的行，将该行第一个匹配pattern1的字符串替换为pattern2
+  /pattern/s/pattern1/pattern2/g #查找符合pattern的行，将该行所有匹配pattern1的字符串替换为pattern2
+  sed '/yyyyyy/p' test.sh -n #将 test.sh 文件中包含yyyyyy的行输出
+  sed '/BUF/--&--/s' test.sh -i #将test.sh文件中BUF的两端加上--
+  sed -e 's/yes/no/g' -e 's/BUF/buffer/g' test.sh -i #多条替换
+  sed's/yes/no/g ; s/BUF/buffer/g' test.sh -i #多条替换
+  ```
+
+---
+
+### 8.awk的使用
+
+##### 1.awk的基本介绍
+
++ awk比sed强的地方在于不仅能以行为单位还能以列为单位处理文件。**awk缺省的行分隔符是换行，缺省的列分隔符是连续的空格和Tab**，但是行分隔符和列分隔符都可以自定义，比如/etc/passwd文件的每一行有若干个字段，字段之间以:分隔，就可以重新定义awk的列分隔符为:并以列为单位处理这个文件。
+
+---
+
+##### 2.基本使用
+
++ 格式一：`awk 参数  '脚本语句(/pattern/{actions})' 执行文件`
++ 格式二：`awk 参数  -f '脚本文件' 执行文件`
+
+```bash
+ps aux | awk '{print $2}' #输出 ps aux 结果的第二列
+ps aux | awk '{print $(NF-1)}' #输出 ps aux 结果的倒数第二列
+ps aux | awk '$2>2700 && $2 <= 2800 {count=count+1} END {print count}'
+awk -F: "{print $7}" /etc/password #输出  /etc/password 以 : 为分割的第七列
+```
+
+```bash
+awk '$2<75 {printf "%s\t%s\n", $0, "REORDER";} $2>=75 {print $0;}' testfile
+testfile：
+roductA 30 
+ProductB 76
+ProductC 55 
+---------------
+roductA 30 REORDER
+ProductB 76
+ProductC 55 REORDER
+```
+
+----
+
+### 9.find操作
+
+```bash
+find ./ -name *.cpp
+find ./ -type f/d/p/c/b/s
+find ./ -size +3M -size -7M #默认为512B 一个扇区大小
+```
 
 ---
 
@@ -2873,7 +2955,7 @@ ARP 实现由 IP 地址得到 MAC 地址。
 + ICMP报文作为IP层数据报的数据，加上数据报的首部，组成 IP 数据报发送出去。
 + 主机 A 向主机 B 发送了数据包，由于某种原因，途中的路由器 未能发现主机 B 的存在， 这时路由器就会向主机 A 发送一个 ICMP 目标不可达数据包，说明发往主机 B 的包未能成功。
 
-<div align = center><img src="../图片/Network31.png" width="300px" /></div>
+<div align = center><img src="../图片/Network31.png" width="500px" /></div>
 
 + 应用：ping，Traceroute
 
@@ -6251,4 +6333,439 @@ void consumer() {
 ---
 
 ## 六.智力题
+
+##### 1. **三人三鬼过桥**
+
+>  有三个人跟三个鬼要过河，河上没桥只有条小船，然后船一次只能渡一个人和一个鬼，或者两个鬼或者两个人，无论在哪边岸上，只有是人比鬼少的情况下(如两鬼一人，三鬼两人，三鬼一人)人会被鬼吃，然而船又一定需要人或鬼操作才能航行(要有人或鬼划船),问,如何安全的把三人三鬼渡过河对岸?
+
+1. 先两鬼过去。在一鬼回来。对面有一鬼。这边有三人两鬼。 
+2. 再两鬼过去。在一鬼回来。对面有两鬼。这边有三人一鬼。 
+3. 再两人过去。一人一鬼回来。对面一人一鬼。这边两人两鬼。
+4.  最后两人过去。一鬼回来。对面三人。这边三鬼。 
+5. 剩下的就三个鬼二个过去一个回来在接另外个就OK了。
+
+---
+
+##### ==2. **赛马找最快的马匹**==
+
+> 25匹马5条跑道找最快的3匹马，需要跑几次? 参考回答:7 
+
+将25匹马分成ABCDE 5组，假设每组的排名就是A1>A2>A3>A4>A5,用边相连，这里比赛5次
+
+第6次，每组的第一名进行比赛，可以找出最快的马，这里假设A1>B1>C1>D1>E1 ；D1，E1肯定进不了前3，直接排除掉
+
+第7次，B1 C1 A2 B2 A3比赛，可以找出第二，第三名
+
+所以最少比赛需要7次
+
+>  64匹马8条跑道找最快的4匹马，需要跑几次? 参考回答:11  （8+1+1+1）
+
+1. 第一步 全部马分为8组，每组8匹，每组各跑一次，然后淘汰掉每组的后四名；此时比赛8场   
+
+2. 取每组第一名进行一次比赛，然后淘汰最后四名所在组的所有马；这个时候总冠军已经诞生，它就是A；而其他可能跑得最快的三匹马只可能是下图中的黄域了(A2,A3,A4,B1,B2,B3,C1,C2,D1，共9匹马)
+
+4. 只要从上面的9匹马中找出跑得最快的三匹马就可以了，但是现在只要8个跑道，随机选出8匹马进行一次比赛吧(需要比赛一场)
+5. 上面比赛完，选出了前三名，但是9匹马中还有一匹马和前三名 比一比吧，这四匹马比一场，选出前三名。最后加上总冠军
+
+>  25匹马5条跑道找最快的5匹马，需要跑几次? 参考回答:最少8次最多9次
+
+将马分成A、B、C、D、E五组。  第1-5次比赛：各组分别进行比赛，决出各组名次  
+
+第6次比赛：找出第一名，比较A1、B1、C1、D1、E1  ，假设是A1最快  
+
+第7次比赛：找出第二名和第三名，比较  A2、A3、B1、B2、C1，假设A2和A3最快
+
+第8次比赛：找出第四名和第五名，比较A4、A5、B1、B2、C1，前两名分别是第四和第五名
+
+<img src="../图片/赛马1.png" style="zoom:50%;" />
+
+<img src="../图片/赛马2.png" style="zoom:50%;" />
+
+---
+
+##### 3. **给定随机函数，生成别的随机数**
+
+> 给定生成1到5的随机数Rand5()，如何得到生成1到7的随机数函数Rand7()
+
+由大的生成小的容易，比如由Rand7()生成Rand5()，所以我们先构造一个大于7的随机数生成函数。 记住下面这个式子
+
+```c++
+RandNN= N( RandN()-1 ) + RandN() ;// 生成1到N^2之间的随机数 可以看作是在数轴上撒豆子。
+//N是跨度/步长，是RandN()生成的数的范围长度， 
+//RandN()-1的目的是生成0到N-1的数，是跳数。后面+RandN()的目的是填满中间的空隙
+```
+
+比如`Rand25= 5( Rand5()-1 ) + Rand5()`可以生成1到25之间的随机数。可以只要1到21(3*7)之间 的数字，所以可以这么写
+
+```c++
+int rand7(){
+    int x=INT_MAX;
+    while(x>21){
+      	x=5*(rand5()-1)+rand5();
+    }
+  	return x%7+1;
+}
+```
+
+>  用 Rand7() 实现 Rand10()
+
+```c++
+int rand10(){
+    int x=INT_MAX;
+    while(x>40){	//最接近的倍数
+      	x=7*(rand7()-1)+rand7();
+    }
+  	return x%10+1;
+}
+```
+
+---
+
+##### 4. **砝码称轻重，找出最轻的**
+
+> 有一个天平，九个砝码，其中一个砝码比另八个要轻一些，问至少要用天平称几次才能将轻的那个 找出来?
+
+至少2次。
+
++ 第一次，一边3个，哪边轻就在哪边，一样重就是剩余的3个; 
++ 第二次，一边1个，哪边轻就是哪个，一样重就是剩余的那个;
+
+> 十组砝码每组十个，每个砝码都是10g重，但是现在其中有一组砝码每个都只有9g重，有个能显示克数的秤，最少称几次能找到轻的那组? 
+
+至少1次。
+
++ 将砝码分组1~10，第一组拿一个，第二组拿两个以此类推。。第十组拿十个放到秤上称出克数x，则y =550 - x，第y组就是轻的那组。
+
+---
+
+##### 5. **利用空瓶换饮料，最多喝几瓶**
+
+> 1000瓶饮料，3个空瓶子能够换1瓶饮料，问最多能喝几瓶?
+
++ 拿走3瓶，换回1瓶，相当于减少2瓶。但是最后剩下4瓶的时候例外，这时只能换1瓶。所以我们计算 1000减2能减多少次，直到剩下4.(1000-4=996，996/2=498)所以1000减2能减498次直到剩下4瓶，最后 剩下的4瓶还可以换一瓶，所以总共是1000+498+1=1499瓶。
+
+---
+
+##### 6. **毒药毒白鼠，找出哪个瓶子中是毒药**
+
+> 有1000个一模一样的瓶子，其中有999瓶是普通的水，有1瓶是毒药。任何喝下毒药的生命都会在一星期之后死亡。现在你只有10只小白鼠和1个星期的时间，如何检验出哪个瓶子有毒药?
+
++ 首先一共有1000瓶，2的10次方是1024，刚好大于1000，也就是说，1000瓶药品可以使用10位二进制 数就可以表示。从第一个开始:
+
+```c++
+第一瓶  :	00 0000 0001
+第二瓶  :	00 0000 0010
+第三瓶  :	00 0000 0011
+......
+第999瓶 :	11 1111 0010
+第1000瓶: 11 1111 0011
+```
+
++ 老鼠按顺序编号ABCDEFGHIJ，分别代表从低到高每一个位。 每只老鼠对应一个二进制位，如果该位上的数字为1，则给老鼠喝瓶里的药。
+
++ 观察，若死亡的老鼠编号为:ACFGJ，一共死去五只老鼠，则对应的编号为 10 0110 0101，则有毒的药品为该编号的药品，转为十进制数为:613号。(这才是正解，当然前提是老鼠还没被撑死)
+
+> 8瓶酒一瓶有毒，用小老鼠测试。每次测试结果8小时后才会得出，而你只有8个小时的时间。最少需要几只老鼠测试
+
++ 一样，进行二进制编号
+
++ 其中，第一个老鼠喝下最低位为1对应的酒，第二个老鼠喝下中间位为1对应的酒，第三个老鼠喝下最高位为1对应的酒
++ 最后将所有中毒的老鼠，对应的位次进行与操作即可以知道那瓶毒药有毒了
+
+---
+
+##### 7. **利用烧绳子计算时间**
+
+> 现有若干不均匀的绳子，烧完这根绳子需要一个小时，问如何准确计时15分钟，30分钟，45分钟，75分钟。。。
+
+计算15分钟:对折之后两头烧(要求对折之后绑的够紧，否则看45分钟解法)
+
+计算30分钟:两头烧
+
+计算45分钟:两根，一根两头烧一根一头烧，两头烧完过了30分钟，立即将第二根另一头点燃，到烧完 又过15分钟，加起来45分钟
+
+计算75分钟:将30和45分钟的方式加起来就可以了
+
+---
+
+##### 8. **在24小时里面时针分针秒针可以重合几次**
+
++ 24小时中时针走2圈，而分针走24圈，时针和分针重合24-2=22次，而只要时针和分针重合，秒针一定有机会重合，所以总共重合22次
+
+---
+
+##### 9. **100个奴隶猜帽子颜色**
+
+> 一百个奴隶站成一纵列，每人头上随机带上黑色或白色的帽子，各人不知道自己帽子的颜色，但是能看见自己前面所有人帽子的颜色.
+>
+> 然后从最后一个奴隶开始，每人只能用同一种声调和音量说一个字:”黑”或”白”，
+>
+> 如果说中了自己帽子的颜色，就存活，说错了就拉出去斩了，说的参考回答所有奴隶都能听见。 是否 说对，其他奴隶不知道。
+>
+> 在这之前，所有奴隶可以聚在一起商量策略，问如果奴隶都足够聪明而且反应足够快，100个人最大存活率是多少?
+
+1. 最后一个人如果看到奇数顶黑帽子报“黑”否则报“白”，他可能死 
+2. 其他人记住这个值(实际是黑帽奇偶数)，在此之后当再听到黑时，黑帽数量减一 
+3. 从倒数第二人开始，就有两个信息:记住的值与看到的值，相同报“白”，不同报“黑” 
+
+99人能100%存活，1人50%能活
+
+> 此题还有变种:每个奴隶只能看见前面一个人帽子颜色又能最多存活多少人?
+
++ 增加限制条件后，上面的方法就失效了，此时只能约定偶数位奴隶说他前一个人的帽子颜色，奇数奴隶获取信息100%存活，偶数奴隶50几率存活
+
+---
+
+##### 10. **小猴子搬香蕉**
+
+> 一个小猴子边上有100根香蕉，它要走过50米才能到家，每次它最多搬50根香蕉，(多了就被压死 了)，它每走 1米就要吃掉一根，请问它最多能把多少根香蕉搬到家里?
+
++ 第一阶段:假如把100根香蕉分为两箱。一箱50根。
+
+  + 第一步，把A箱搬一米，吃一根。
+
+  + 第二步，往回走一米，吃一根。
+
+  + 第三步，把B箱搬一米，吃一根。
+
+  + 这样，把所有香蕉搬走一米需要吃掉三根香蕉。这样走到第几米的时候，香蕉数刚好小于50呢?
+
+    `100-(n*3)<50 && 100-(n-1*3)>50`
+
+  + 走到16米的时候，吃掉48根香蕉，剩52根香蕉。这步很有意思，它可以直接搬50往前走，也可以再来回搬一次，但结果都是一样的。
+
+  + 到17米的时候，猴子还有49根香蕉。这时猴子就轻松啦，直接背着走就行。
+
++  第二阶段: 走一米吃一根
+  + 把剩下的50-17=33米走完。还剩49-33=16根香蕉。
+
+---
+
+##### ==11. **高楼扔鸡蛋(经典问题)**==
+
+> 有2个鸡蛋，从100层楼上往下扔，以此来测试鸡蛋的硬度。比如鸡蛋在第9层没有摔碎，在第10层摔碎了，那么鸡蛋不会摔碎的临界点就是9层。
+
++ 暴力法：
+  + 把其中一个鸡蛋，从第1层开始往下扔。如果在第1层没 碎，换到第2层扔;如果在第2层没碎，换到第3层扔.......如果第59层没碎，换到第60层扔;如果第60层碎了，说明不会摔碎的临界点是第59层。
+  + 在最坏情况下，这个方法需要扔100次。
+
++ 二分法：
+  + 采用类似于二分查找的方法，把鸡蛋从一半楼层(50层)往下扔。
+    +  如果第一枚鸡蛋，在50层碎了，第二枚鸡蛋，就从第1层开始扔，一层一层增长，一直扔到第49层。
+    + 如果第一枚鸡蛋在50层没碎了，则继续使用二分法，在剩余楼层的一半(75层)往下扔......
+  + 这个方法在最坏情况下，需要尝试50次。
++ 均匀法：
+  + 做一个平方根运算，100的平方根是10。 因此尝试每10层扔一次，第一次从10层扔，第二次从20层扔，第三次从30层......一直扔到100层。 这样的最好情况是在第10层碎掉，尝试次数为 1 + 9 = 10次。 最坏的情况是在第100层碎掉，尝试次数为 10 + 9 = 19次。
+  + 可以从15层开始扔，接下来从25层、35层扔......一直到95层。 这样最坏情况是在第95层碎掉，尝试次数为 9 + 9 = 18次。
+
++ 最优解法：
+
+  + 假设第一次扔在第x层:
+
+    + 如果第一个鸡蛋碎了，那么第二个鸡蛋只能从第1层开始扔，一直扔到第x-1层。总共尝试了x-1+1 = x次，刚刚好没有超出假设次数
+
+    + 因此，要想尽量楼层跨度大一些，又要保证不超过假设的尝试次数x，那么第一次扔鸡蛋的最优选择就是第x层。
+
+    + 那么算最坏情况，第二次你只剩下x-1次机会，按照上面的说法，你第二次尝试的位置必然是X+(X- 1);
+
+    + 以此类推我们可得:
+
+      `x + (x-1) + (x-2) + ... + 1 = 100`
+
+    + 左边的多项式是各次扔鸡蛋的楼层跨度之和。由于假设尝试x次，所以这个多项式共有x项。 右边是总的楼层数100。
+
+    + 最终x向上取整，得到 x = 14
+
+  + 最优解在最坏情况的尝试次数是14次，第一次扔鸡蛋的楼层也是14层。最后把第一个鸡蛋没碎的情况下，所尝试的楼层数完整列举出来:
+
+    14，27， 39， 50， 60， 69， 77， 84， 90， 95， 99， 100
+
+> 举个例子验证下:
+>
+> 假如鸡蛋不会碎的临界点是65层，那么第一个鸡蛋扔出的楼层是14，27，50，60，69。这时候啪的一声 碎了。
+>
+> 第二个鸡蛋继续，从61层开始，61，62，63，64，65，66，啪的一声碎了。 因此得到不会碎的临界点65层，总尝试次数是 6 + 6 = 12 < 14 。
+
+---
+
+##### 12. **N只蚂蚁走树枝，问总距离或者总时间**
+
+> 放N只蚂蚁在一条长度为M树枝上，蚂蚁与蚂蚁之间碰到就各自往反方向走，问总距离或者时间为多少?
+
++ 蚂蚁相碰就往反方向走，可以直接看做没有发生任何事:大家都相当于独立的
++ A蚂蚁与B蚂蚁相碰后你可以看做没有发生这次碰撞，这样无论是求时间还是距离都很简单了。
+
+---
+
+##### 13. A杯装满水是5升，B杯装满水是3升。不借助别的任何工具，只用这两个杯子如何精确的得到4升水 
+
+1. 先用B倒进A三升水      
+2. B再盛满，将A倒满：B内剩1升。  
+3. 将A倒空：将B内的一升倒进A。      
+4. B再盛满3升。倒进A，则得4升。
+
+---
+
+##### 14. N个强盗分配M个金币，求方案使得自己分配最多
+
+> 5个海盗抢到了100枚金币，每一颗都一样的大小和价值。 他们决定这么分
+>
+> 1. 抽签决定自己的号码(1，2，3，4，5)
+>
+> 2. 首先，由1号提出分配方案，5人进行表决，当半数以上的人同意时( 不包括半数)，按照他的提案进行分配，否则将被扔入大海喂鲨鱼。
+>
+> 3. 1号死后，由2号提出分配方案，4人进行表决，当且仅当半超过半数的人同意时，按照他的提案进行分配，否则将被扔入大海喂鲨鱼。 
+>
+>    依次类推......
+>
+> 假设每一位海盗都足够聪明，并且利益至上，能多分一枚金币绝不少分，那么1号海盗该怎么分金币才能使自己分到最多的金币呢?
+
++ 从后向前推，如果1至3号强盗都喂了鲨鱼，只剩4号和5号的话，5号投反对票让4号喂鲨鱼以独吞全部金币。所以4号惟有支持3号才能保命。
+
++ 3号知道这一点，会提出`100,0,0`的分配方案，对4号、5号不给金币而将全部金币归为已有，知道4号一无所获但还是会投赞成票，再加上自己一票，他的方案即可通过。
++ 2号推知3号的方案，就会提出`98,0,1,1`的方案，即放弃3号，而给予4号和5号各一枚金币。 由于该方案对于4号和5号来说比在3号分配时更为有利，他们将支持他而不希望他出局而由3号来分配。 这样，2号将拿走98枚金币。
++ 2号的方案也会被1号所洞悉，1号并将提出(97，0，1，2，0)或(97，0，1，0，2)的方案， 即放弃2号，而给3号一枚金币，同时给4号(或5号)2枚金币。由于1号的这一方案对于3号和4号(或5 号)来说，相比2号分配时更优，他们将投1号的赞成票。
++ 参考回答是：1号强盗分给3号1枚金 币，分给4号或5号强盗2枚，自己独得97枚。分配方案可写成(97，0，1，2，0)或(97，0，1，0， 2)。
+
+> 此题还有变种:就是只需要一半人同意即可，不需要一半人以上同意方案就可以通过，在其他条件不变 的情况下，1号该怎么分配才能获得最多的金币?
+
++ 4号：4号提出的方案的时候肯定是最终方案，因为不管5号同意不同意都能通过，所以4号5号不必担心自己被投入大海。那此时5号获得的金币为0，4号获得的金币为100。
++ 5号：因为4号提方案的时候 ，自己获取的金币为0 。所以只要4号之前的人分配给自己的金币大于0就同意该方案。
++ 4号：如果3号提的方案一定能获得通过(原因:3号给5号的金币大于0， 5号就同意 因此就能通过)，那自己获得的金币就为0，所以只要2号让自己获得的金币大于0就会同意。
++ 3号：因为到了自己提方案的时候可以给5号一金币，自己的方案就能通过，但考虑到2号提方案的时候 给4号一个金币，2号的方案就会通过，那自己获得的金币就为0。所以只要1号让自己获得的金币大于0 就会同意。
++ 2号：因为到了自己提方案的时候只要给4号一金币，就能获得通过，根本就不用顾及3 号 5号同意不同 意，所以不管1号怎么提都不会同意。
++ 1号：2号肯定不会同意。但只要给3号一块金币，5号一块金币(因为5号如果不同意，那么4号分配的时候，他什么都拿不到)就能获得通过。
++ 所以参考回答是 98，0，1，0，1。
+
+---
+
+##### 15. **火枪手决斗，谁活下来的概率大?**
+
+> 彼此痛恨的甲、乙、丙三个枪手准备决斗。甲枪法最好，十发八中;乙枪法次之，十发六中;丙 枪法最差，十发四中。如果三人同时开枪，并且每人每轮只发一枪;那么枪战后，谁活下来的机会大一 些?
+
++ 如同田忌赛马一般，枪手甲一定要对枪手乙先。因为乙对甲的威胁要比丙对甲的威胁更大，甲应该首先干掉乙，这是甲的最佳策略。
++ 同样的道理，枪手乙的最佳策略是第一枪瞄准甲。乙一旦将甲干掉，乙和丙进行对决，乙胜算的概率自然大很多。
++ 枪手丙的最佳策略也是先对甲。乙的枪法毕竟比甲差一些，丙先把甲干掉再与乙进行对决，丙的存活概率还是要高一些。
+
+第一轮:甲射乙，乙射甲，丙射甲。
+
++ 甲的活率为24%(40% X 60%)
++ 乙的活率为20%(100% - 80%)
++ 丙的活率为100%(无人射丙)。
+
+由于丙100%存活率，因此根据上轮甲乙存活的情况来计算三人第二轮的存活几率:
+
++ 情况1:甲活乙死(24% X 80% = 19.2%) 甲射丙，丙射甲:甲的活率为60%，丙的活率为20%。
++  情况2:乙活甲死(20% X 76% = 15.2%) 乙射丙，丙射乙:乙的活率为60%，丙的活率为40%。 
++ 情况3:甲乙同活(24% X 20% = 4.8%) 重复第一轮。
++ 情况4:甲乙同死(76% X 80% = 60.8%) 枪战结束。
+
+据此来计算三人活率:
+
++ 甲的活率为(19.2% X 60%) +  (4.8% X 24%) = 12.672%
++ 乙的活率为(15.2% X 60%) + (4.8% X 20%) = 10.08%
++ 丙的活率为(19.2% X 20%) + (15.2% X 40%) + (4.8% X 100%) + (60.8% X 100%) = 75.52%
+
+---
+
+##### 16. **先手必胜的问题**
+
+> 100本书，每次能够拿1-5本，怎么拿能保证最后一次是你拿?
+
++ 寻找每个回合固定的拿取模式，最后一次是我拿，那么上个回合最少剩下6本。那么只要保持每个回合 结束后都剩下6的倍数，并且在这个回合中我拿的和对方拿的加起来为6(这样这个回合结束后剩下的还 是6的倍数)，就必胜。
++ 关键是第一次我必须先手拿(100%6=4)本(这不算在第一回合里面)。
+
+---
+
+##### 17. **掰巧克力问题或者参加辩论赛**
+
+> 掰巧克力问题 `N*M` 块巧克力，每次掰一块的一行或一列，掰成1*1的巧克力需要多少次?
+
++ 每次拿起一块巧克力，掰一下(无论横着还是竖着)都会变成两块，因为所有的巧克力共有`N*M`块，所 以要掰`N*M-1`次，-1是因为最开始的一块是不用算进去的。
+
+> 1000个人参加辩论赛，1V1，输了就退出，需要安排多少场比赛?
+
++ 每一场辩论赛参加两个人，消失一个人，所以可以看作是每一场辩论赛减少一个人，直到最后剩下1个 人，所以是1000-1=999场。
+
+---
+
+##### 18. 生日问题
+
+> 小明和小强都是张老师的学生，张老师的生日是M月N日,
+>
+> 2人都知道张老师的生日是下列10组中的一天，张老师把M值告诉了小明,把N值告诉了小强，张老师问他们知道他的生日是那一天吗?
+>
+> 3月4日 3月5日 3月8日
+>
+> 6月4日 6月7日
+>
+> 9月1日 9月5日
+>
+> 12月1日 12月2日 12月8日
+>
+> 小明说:如果我不知道的话，小强肯定也不知道.
+>
+> 小强说:本来我也不知道，但是现在我知道了.
+>
+> 小明说:哦，那我也知道了.
+>
+> 请根据以上对话推断出张老师的生日是哪一天?
+
+1. 小明肯定小强不知道是哪天，排除所有月份里有单独日的月份：6月和12月<因为如果小强的N是2或者7的话，小强就知道了，所以把6月7日与12月2日排除>，所以小明拿到的是3或者9
+
+2. 小强本来不知道，所以小强拿到的不是2或者7，但是小强现在知道了，说明把6月与12月排除后，小强拿到的是1,4,8中的一个<这里小强肯定没拿到5，否则他不会知道是哪天的>
+
+3. 小明现在也知道了，说明小明拿到的不是3，否则他不会知道是3月4日还是3月8日的，所以小明拿到的是9才能唯一确定生日
+
+> 小明和小强是赵老师的学生，张老师的生日是M月N日，张老师把M值告诉小明，N值告诉小强。给他们六个选项
+>
+> 3月1日 3月3日 7月3日 7月5日 
+>
+> 9月1日 11月7日
+>
+> 小明说:我猜不出来
+>
+> 小强说:本来我也猜不出来，但是现在我知道了
+>
+> 问:张老师生日多少
+
+1.小明说猜不出来，说明小明拿到的不是单独出现的9或者11，说明老师生日只能是3月或者7月
+
+2.小强原本不知道，说明小强拿到的不是单独出现的5或者7，说明老是生日是1日或3日
+
+3.小强现在知道了，说明小强拿到的是1，因为如果拿到的是3，那么小强就不知道是3月3日还是7月3日了
+
+生日为：3月1日
+
+---
+
+##### 19. 至少多少人及格 
+
+> 100个人回答五道试题，有81人答对第一题，91人答对第二题，85人答对第三题，79人答对第四题，74人答对第五题，答对三道题或三道题以上的人算及格， 那么，在这100人中，至少有多少人及格。
+
++ 那就是说不及格的人数最多时及格的人数最少．
++ 100人回答5道题，相当于做500道题，共答对的题目数量有：81+91+85+79+74=410（道），则出错的数量有：500-410=90（道），错3道以上就不及格，每人错3道时不及格人数最多，90÷3=30（人），则及格的人数是：100-30=70（人）。 
+
+---
+
+##### 20. 取石子（博弈游戏）
+
+> 一共有N颗石子（或者其他乱七八糟的东西），每次最多取M颗最少取1颗，A，B轮流取，谁最后会获胜？（假设他们每次都取最优解）。
+
++ 假如A先取，
+  + N<M，A获胜；
+  +  N>M，若N能被（M + 1）整除时，A失败； 若N不能被（M + 1）整除时，A获胜；
+
++ 假如B先取，（同上）；
+
+还是以A先手为例，N<M时A一次拿完（不可能给B留机会，前提就是每次取最优），不会给B留机会；
+
+N>M时，A要想赢，必须要在自己倒数第二次取完的时候还剩下（M + 1）颗石子（此时A和B还可以再取一次就可以分出胜负游戏就结束了），这样不论B取几颗，A都获胜！但是要怎样才能控制最后一轮的石子数量？
+
+分两种情况分析，
+
+1. N不能被（M + 1）整除，A先拿走n颗石子（使得剩下的石子数量是（M + 1）的整数倍），那么下一次B拿走k颗石子时，A就拿走（M + 1）- k颗石子。这样不论B怎么拿A总能控制剩下的石子数量是（M + 1）的整数倍，那么最后一轮一定剩下（M + 1）颗石子；
+2. N能被（M + 1）整除，A就认输吧。。。（B除非傻才会让A赢）无论A怎么拿，B可以控制石子数量（即当B拿完后总能使剩下的石子数量是（M + 1）的整数倍)，在最后一轮之前B拿完后还剩（M + 1）颗，A拿多少颗都是输。
+
+---
 
