--- a/秋招经历/面经2.md
+++ b/秋招经历/面经2.md
@@ -34,6 +34,8 @@
 
 ##### 1.排序
 
+> 数组有序情况下，冒泡和插入时间复杂度为(n)，在第一层循环设置标志位flag = false，只要第二层循环元素交换过就让flag设置为true。如果一次遍历之后元素没有交换，则false直接跳出循环，时间复杂度大大减少。
+
 > 稳定：相同的元素排序前后排列顺序不变
 >
 > + 稳定：冒泡，插入，归并
@@ -144,6 +146,110 @@
 > - 计数排序：每个桶只存储单一键值；
 > - 桶排序：每个桶存储一定范围的数值；
 > - 基数排序：根据键值的每位数字来分配桶；
+
+---
+
+##### 4. 有10GB数据在有限内存中排序
+
+有10GB的订单数据，需按订单金额（假设金额都是正整数）进行排序，但内存有限，仅几百MB。
+
+> 1. 扫描一遍文件，看订单金额所处数据范围，比如1元-10万元，那么就分100个桶。
+> 2. 第一个桶存储金额1-1000元之内的订单，第二个桶存1001-2000元之内的订单，依次类推。
+> 3. 每个桶对应一个文件，并按照金额范围的大小顺序编号命名（00，01，02，…，99）。
+> 4. 将100个小文件依次放入内存并用快排排序。
+> 5. 所有文件排好序后，只需按照文件编号从小到大依次读取每个小文件并写到大文件中即可。
+
+---
+
+##### 5.对上百万数量的手机号码进行排序怎么做？
+
++ 如果内存允许的话，就直接采用快排或归并排序。
+
++ 如果内存不允许的话，就借助外存，采用k路归并排序算法。具体是将这些数据拆分成k组，分别写入k个文件中，每个文件的数据足以读入内存中，然后对每一个文件分别完成排序，最后再k路归并，完成整体排序。
+
+  <img src="../图片/K路归并.png" width="800px" />
+
+---
+
+##### 6.从百万数据中如何挑选出前100个高频数据
+
++ 如果内存足够的话，可以采用哈希表去重。
++ 如果内存不足的话，我们就借助外存，设置k个文件，然后将所有数据哈希映射至文件中，通过哈希映射，可以保证相同的数据只会写入固定的文件中。最后再对每个文件进行去重。就完成整体数据去重了。
+
+---
+
+##### 7.给定一个数组，求取第k大的值。（TopK）
+
++ 题目只要求返回最小的 k 个数，对这 k 个数的顺序并没有要求。因此，只需要将数组划分为 最小的 k 个数 和 其他数字 两部分即可，而快速排序的哨兵划分可完成此目标。
+
++ 根据快速排序原理，如果某次哨兵划分后 基准数正好是第 k+1 小的数字 ，那么此时基准数左边的所有数字便是题目所求的 最小的 k 个数 。
+
++ 根据此思路，考虑在每次哨兵划分后，判断基准数在数组中的索引是否等于 k，若 true 则直接返回此时数组的前 k 个数字即可。
+
+<img src="../图片/TopK.png" width="800px" />
+
+---
+
+##### 8.超大文件取数字交集
+
+>  现有两个各有20亿行的文件，每一行都只有一个数字，求这两个文件的交集。 
+
+采用bitset进行问题解决
+
+因为int的最大数是2^32 - 1 == 4G，用一个二进制的下标来表示一个int值，大概需要4G个bit位，即约4G/8 = 552M的内存。这可以解决问题了。
+
+如果都是正数：
+
+用int存的话，4G bit/32b = 2的32次/2的5次 = 2的27次 = 128M个
+
+建立int [128M] 的数组，对于每个数，先 /32，确定在数组哪个位置，然后%32，确定在该int的哪一位
+
+然后对这个数组取并集即可统计
+
+正负都有
+
+1.首先遍历文件，将每个文件按照数字的正数，负数标记到2个BitSet上为：正数BitSetA_positive，负数BitSetA_negative
+
+2.遍历另为一个文件，生成正数：BitSetB_positive ,BitSetB_negative
+
+3.取BitSetA_positive and BitSetB_positive 得到2个文件的正数的交集，同理得到负数的交集。
+
+4.合并，问题解决。
+
+这里一次只能解决全正数，或全负数，所以要分两次。
+
+---
+
+##### 9.字符串重复
+
+>  给定a、b两个文件，各存放50亿个url，每个url各占64字节，内存限制是4G，让你找出a、b文件共同的url
+
++ 可以估计每个文件安的大小为5G×64=320G（5\*10^9*64 = 320 * 10^9 B），远远大于内存限制的4G（4*10^9 B）。所以不可能将其完全加载到内存中处理。考虑采取分而治之的方法。
+
++ 1.分文件：
+
+  遍历文件a，对每个url求取hash(url)%1000，然后根据所取得的值将url分别存储到1000个小文件（记为a0,a1,...,a999）中。这样每个小文件的大约为300M。
+
+  遍历文件b，采取和a相同的方式将url分别存储到1000小文件（记为b0,b1,...,b999）。这样处理后，所有可能相同的url都在对应的小文件（a0vsb0,a1vsb1,...,a999vsb999）中，不对应的小文件不可能有相同的url。然后我们只要求出1000对小文件中相同的url即可。
+
++ 2. 逐个找重复
+
+  + 求每对小文件中相同的url： 把其中一个小文件的url存储到hash_set中，然后遍历另一个小文件的每个url，看其是否在刚才构建的hash_set中，如果是，那么就是共同的url，存到文件里面就可以了。
+
+---
+
+##### 10.海量数据中位数（计数排序）
+
+> 只有2G内存的pc机，在一个存有10G个整数的文件，从中找到中位数，写一个算法。
+
+解法：首先假设是32位无符号整数。
+1.读一遍10G个整数，把整数映射到256M个区段中，用一个64位无符号整数给每个相应区段记数。
+
+> 说明：整数范围是0 - 2^32 - 1，一共有4G种取值，映射到256M个区段，则每个区段有16（4G/256M = 16）种值，每16个值算一段， 0～15是第1段，16～31是第2段，……2^32-16 ～2^32-1是第256M段。一个64位无符号整数最大值是 0～8G-1，这里先不考虑溢出的情况。总共占用内存256M×8B=2GB。
+
+2.从前到后对每一段的计数累加，当累加的和超过5G时停止，找出这个区段（即累加停止时达到的区段，也是中位数所在的区段）的数值范围，设为[a，a+15]，同时记录累加到前一个区段的总数，设为m。然后，释放除这个区段占用的内存。
+3.再读一遍10G个整数，把在[a，a+15]内的每个值计数，即有16个计数。
+4.对新的计数依次累加，每次的和设为n，当m+n的值超过5G时停止，此时的这个计数所对应的数就是中位数。
 
 ---
 
